Fix checkstyle and findbug.